[gd_scene load_steps=7 format=3 uid="uid://bjk4xtsrb5n6i"]

[ext_resource type="Texture2D" uid="uid://0lr82u4086gu" path="res://Textures/placeholder_projectile.png" id="1_j6wgl"]
[ext_resource type="Script" path="res://Projectiles/cannon_projectile.gd" id="1_plsk5"]
[ext_resource type="Script" path="res://States/finite_state_machine.gd" id="2_7q6us"]
[ext_resource type="Script" path="res://States/Projectiles/projectile_stored.gd" id="3_dg5aq"]
[ext_resource type="Script" path="res://States/Projectiles/fired_in_direction.gd" id="4_apomj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56035"]
size = Vector2(70, 20)

[node name="CannonProjectile" type="CharacterBody2D"]
script = ExtResource("1_plsk5")

[node name="ProjectileArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileArea"]
shape = SubResource("RectangleShape2D_56035")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j6wgl")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_7q6us")
initial_state = NodePath("FiredInDirection")

[node name="ProjectileStored" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("projectile")]
script = ExtResource("3_dg5aq")
projectile = NodePath("../..")

[node name="FiredInDirection" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("projectile")]
script = ExtResource("4_apomj")
projectile = NodePath("../..")

[connection signal="body_entered" from="ProjectileArea" to="." method="_on_projectile_area_body_entered"]
